[package]
authors = ["BarbossHack <barbossh4ck@protonmail.com>"]
categories = ["database-implementations", "concurrency", "data-structures", "caching"]
description = "A key-value store based on unix shared-memory files (shm) for persisting state across program restarts."
edition = "2021"
homepage = "https://github.com/BarbossHack/shmap"
keywords = ["shm", "shared-memory", "inter-process", "store", "ramfs"]
license = "MIT OR Apache-2.0"
name = "shmap"
readme = "README.md"
repository = "https://github.com/BarbossHack/shmap"
version = "0.4.2"

[dependencies]
aes-gcm = { version = "0.10.1", features = ["std"] }
bincode = { version = "2.0.0-rc", default-features = false, features = ["std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fdlimit = "0.2.1"
libc = "0.2.139"
log = "0.4.17"
memmap2 = "0.5.8"
named-lock = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
sha2 = "0.10.6"
thiserror = "1.0.38"
