[package]
authors = ["BarbossHack <barbossh4ck@protonmail.com>"]
categories = ["database-implementations", "concurrency", "data-structures", "caching"]
description = "A key-value store based on linux shared-memory files (shm) for persisting state across program restarts."
edition = "2021"
homepage = "https://github.com/BarbossHack/shmap"
keywords = ["shm", "shared-memory", "inter-process", "store", "ramfs"]
license = "MIT OR Apache-2.0"
name = "shmap"
readme = "README.md"
repository = "https://github.com/BarbossHack/shmap"
version = "0.4.7"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
bincode = { version = "=2.0.0-rc.3", default-features = false, features = ["std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fdlimit = "0.3"
libc = "0.2"
log = "0.4"
memmap2 = "0.9"
named-lock = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.11"

[lints.clippy]
missing_errors_doc = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
